# Simple-Calculator

./: LICENSE  README.md  controller.py  main.py  model.py  pyproject.toml  view.py
calculator/: controller.py  main.py  model.py  view.py
