[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Simple Calculator"
version = "0.1.0"
description = "A simple calculator using tkinter"
readme= "README.md"
license = {text = "MIT"}
dependencies = ["tkinter"]

[project.scripts]
calculator = "calculator.main"